--- a/templates/views/error/404.twig
+++ b/templates/views/error/404.twig
@@ -1,5 +1,5 @@
 {% extends '../layout/layout.twig' %}
 
 {% block BODY %}
-    <h1>404 page not found</h1>
+    <h1 class="title title--no-border">404 page not found</h1>
 {% endblock %}
