--- a/templates/views/layout/layout.twig
+++ b/templates/views/layout/layout.twig
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <link rel="stylesheet" href="templates/static/css/style.css">
+    <link rel="stylesheet" href="/css/style.css">
     <script>
         /**
          * @return {string}
@@ -81,7 +81,7 @@
     </div>
     <div class="content__wrapper">
         <div class="content__container">
-            {% block BODY %}
+            {% block BODY %}{% endblock %}
         </div>
     </div>
 </div>
